<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.autenticacao.CadastroActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/crieSuaConta"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/editNomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/borda"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:padding="10dp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="419dp" />


    <EditText
        android:id="@+id/editEmailCadastro"
        android:background="@drawable/borda"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="264dp" />

    <EditText
        android:id="@+id/editSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/borda"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:maxLength="8"
        android:padding="10dp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="110dp" />
    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/criarConta"
        style="@style/buttonTheme"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="574dp" />

</LinearLayout>