<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.autenticacao.RedefinirSenhaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/tituloActivity"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/instrucao"
        android:textColor="@color/parseBlack"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/editEmailRedefinirSenha"
        android:background="@drawable/borda"
        android:drawableLeft="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnEnviarEmailRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/botao"
        style="@style/buttonTheme"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/blueTheme"/>

</LinearLayout>